--- a/quay-cr.yaml
+++ b/quay-cr.yaml
@@ -7,23 +7,35 @@ spec:
   clair:
     enabled: true
     updateInterval: 60m
-    database:
-      volumeSize: 10Gi
-    imagePullSecretName: redhat-pull-secret
+#    database:
+#      volumeSize: 10Gi
+    imagePullSecretName: redhat-quay-pull-secret
   quay:
     keepConfigDeployment: true
     externalAccess:
-      configHostname: quay-config.apps.name.dev-oops.tech
-      hostname: quay.apps.name.dev-oops.tech
+      configHostname: quay-config.apps.cluster-cd57.cd57.example.opentlc.com
+      hostname: quay.apps.cluster-cd57.cd57.example.opentlc.com
       tls:
         termination: edge
       type: Route
     deploymentStrategy: Recreate
-    database:
-      volumeSize: 10Gi
-    imagePullSecretName: redhat-pull-secret
+#    database:
+#      volumeSize: 10Gi
+    imagePullSecretName: redhat-quay-pull-secret
     skipSetup: false
-    registryStorage:
-      persistentVolumeAccessModes:
-        - ReadWriteOnce
-      persistentVolumeSize: 10Gi
+#    registryStorage:
+#      persistentVolumeAccessModes:
+#        - ReadWriteOnce
+#      persistentVolumeSize: 10Gi
+    livenessProbe:
+      initialDelaySeconds: 240
+      httpGet:
+        path: /health/instance
+        port: 8443
+        scheme: HTTPS
+      readinessProbe:
+        initialDelaySeconds: 80
+        httpGet:
+          path: /health/instance
+          port: 8443
+          scheme: HTTPS
