--- a/quay-og.yaml
+++ b/quay-og.yaml
@@ -2,6 +2,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: quay-og
+  generateName: quay-
   namespace: quay
 spec:
   targetNamespaces:
