--- a/quay-security-sub.yaml
+++ b/quay-security-sub.yaml
@@ -9,3 +9,4 @@ spec:
   name: container-security-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
+  CurrentCSV: container-security-operator.v3.3.1
