--- a/ocs-og.yaml
+++ b/ocs-og.yaml
@@ -1,9 +1,9 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: quay-og
-  generateName: quay-
-  namespace: quay
+  name: ocs-og
+  generateName: ocs-
+  namespace: openshift-storage
 spec:
   targetNamespaces:
-    - quay
+    - openshift-storage
