--- a/ocs-sub.yaml
+++ b/ocs-sub.yaml
@@ -1,11 +1,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: container-security-operator
-  namespace: openshift-operators
+  name: ocs-operator
+  namespace: openshift-storage
 spec:
-  channel: quay-v3.4
+  channel: stable-4.6
   installPlanApproval: Automatic
-  name: container-security-operator
+  name: ocs-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
